update styles and projects

--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
-Hola mundo
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<title>Apselom Lab. - Un lugar donde tenemos creaciones y experimentos</title>
+
+	<!-- Bootstrap core CSS -->
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- Custom styles for this template -->
+	<link href="css/1-col-portfolio.css" rel="stylesheet">
+
+    </head>
+
+    <body>
+
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	    <div class="container">
+		<a class="navbar-brand" href="#">Apselom Lab 0.1</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+		    <ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
+			    <a class="nav-link" href="#">Inicio
+				<span class="sr-only">(current)</span>
+			    </a>
+			</li>
+			<li class="nav-item">
+			    <a class="nav-link" href="#">Portafolio web</a>
+			</li>
+			<li class="nav-item">
+			    <a class="nav-link" href="#">Portafolio móvil</a>
+			</li>
+			<li class="nav-item">
+			    <a class="nav-link" href="#">Experimentos</a>
+			</li>
+		    </ul>
+		</div>
+	    </div>
+	</nav>
+
+	<!-- Page Content -->
+	<div class="container">
+
+	    <!-- Page Heading -->
+	    <h1 class="my-4">Proyectos
+		<small>lanzados</small>
+	    </h1>
+
+	    <!-- Project One -->
+	    <div class="row">
+		<div class="col-md-7">
+		    <a href="https://felicidando.com" target="_blank">
+			<img class="img-fluid rounded mb-3 mb-md-0" src="/vendor/img/1.png" Alt="" height="300px">
+		    </a>
+		</div>
+		<div class="col-md-5">
+		    <h3>Felicidando (Perú)</h3>
+		    <p><strong>Ganadora de Startup Perú 4G.</strong>Es un sistema innovador, que busca ser el nexo entre emprendimientos de ayuda social que necesitan apoyo y los recursos necesarios para poder llevarlos a cabo. Para ello, hemos desarrollado una plataforma web que facilita la captación de los recursos para lograr dicho objetivo. </p>
+		    <a class="btn btn-primary" href="https://felicidando.com" target="_blank">Ver proyecto</a>
+		</div>
+	    </div>
+	    <!-- /.row -->
+
+	    <hr>
+
+	    <!-- Project Two -->
+	    <div class="row">
+		<div class="col-md-7">
+		    <a href="#">
+			<img class="img-fluid rounded mb-3 mb-md-0" src="/vendor/img/tacho.png" alt="">
+		    </a>
+		</div>
+		<div class="col-md-5">
+		    <h3>Tacho Inteligente (Perú)</h3>
+		    <p>Tacho inteligente se compone de 2 partes: 1) Un dispositivo (IoT) con un sensor ultrasónico para detectar el nivel de llenado de un contenedor de residuos al cual estará acoplado; este dispositivo envía una señal cuando se encuentra lleno y listo para ser cambiado 2) Aplicación móvil que recibe en tiempo real información sobre las condiciones de llenado del contenedor. Funciona de la siguiente manera: cuando el contenedor se encuentre lleno (el nivel de llenado va a ser determinado por el cliente), este le enviará una señal a la aplicación móvil que podrá ser usada; maximizando así la capacidad del contenedor y disminuyendo los costos de transporte y emisiones de CO2.</p>
+		    <a class="btn btn-primary" href="#">Ver proyecto</a>
+		</div>
+	    </div>
+	    <!-- /.row -->
+
+	    <hr>
+
+	    <!-- Project Three -->
+	    <div class="row">
+		<div class="col-md-7">
+		    <a  href="http://www.aplicacionescolar.com" target="_blank">
+			<img class="img-fluid rounded mb-3 mb-md-0" src="/vendor/img/ae.png" alt="">
+		    </a>
+		</div>
+		<div class="col-md-5">
+		    <h3>Aplicación Escolar (México)</h3>
+		    <p>Es una aplicación móvil para dispositivos Android e IOS en la cual las escuelas pueden enviar información como mensajes de pagos,  tareas ,circulares así como seguimientos académicos y calificaciones gráficadas directo al celular de los padres o alumnos con notificación tipo whatsapp / los papas descargan la Aplicación con el nombre de su colegio desde Play Store o App Store ya que es personalizada a cada escuela.</p>
+		    <a class="btn btn-primary" href="http://www.aplicacionescolar.com" target="_blank">Ver proyecto</a>
+		</div>
+	    </div>
+	    <!-- /.row -->
+
+	    <hr>
+
+	    <!-- Project Four -->
+	    <div class="row">
+
+		<div class="col-md-7">
+		    <a href="#">
+			<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+		    </a>
+		</div>
+		<div class="col-md-5">
+		    <h3>Ameli (Colombia)</h3>
+		    <p>Plataforma de gestión para entidades de salud y organizaciones médicas. Los atributos generales son: manejar citas, historial clínico, notificación para los pacientes y mucho máss. Amelí trabaja de la mano con el compriso de una cultura de orden en los flujos del proceso colombiano</p>
+		    <a class="btn btn-primary" href="#">View Project</a>
+		</div>
+	    </div>
+	    <!-- /.row -->
+
+	    <hr>
+
+	    <!-- Pagination -->
+	    <ul class="pagination justify-content-center">
+		<li class="page-item">
+		    <a class="page-link" href="#" aria-label="Previous">
+			<span aria-hidden="true">&laquo;</span>
+			<span class="sr-only">Previous</span>
+		    </a>
+		</li>
+		<li class="page-item">
+		    <a class="page-link" href="#">1</a>
+		</li>
+		<li class="page-item">
+		    <a class="page-link" href="#">2</a>
+		</li>
+		<li class="page-item">
+		    <a class="page-link" href="#">3</a>
+		</li>
+		<li class="page-item">
+		    <a class="page-link" href="#" aria-label="Next">
+			<span aria-hidden="true">&raquo;</span>
+			<span class="sr-only">Next</span>
+		    </a>
+		</li>
+	    </ul>
+
+	</div>
+	<!-- /.container -->
+
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+	    <div class="container">
+		<p class="m-0 text-center text-white">Copyright &copy; Apselom 2018</p>
+	    </div>
+	    <!-- /.container -->
+	</footer>
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    </body>
+
+</html>
