fix some issues

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 			    </a>
 			</li>
 			<li class="nav-item">
-			    <a class="nav-link" href="#">Portafolio web</a>
-			</li>
-			<li class="nav-item">
-			    <a class="nav-link" href="#">Portafolio móvil</a>
+			    <a class="nav-link" href="#">¡Portafolio!</a>
 			</li>
 			<li class="nav-item">
 			    <a class="nav-link" href="#">Experimentos</a>
+			</li>
+			<li class="nav-item">
+			    <a class="nav-link" href="#">Juegos</a>
 			</li>
 		    </ul>
 		</div>
@@ -112,13 +112,13 @@
 
 		<div class="col-md-7">
 		    <a href="#">
-			<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+			<img class="img-fluid rounded mb-3 mb-md-0" src="/vendor/img/ameli.png" alt="">
 		    </a>
 		</div>
 		<div class="col-md-5">
 		    <h3>Ameli (Colombia)</h3>
 		    <p>Plataforma de gestión para entidades de salud y organizaciones médicas. Los atributos generales son: manejar citas, historial clínico, notificación para los pacientes y mucho máss. Amelí trabaja de la mano con el compriso de una cultura de orden en los flujos del proceso colombiano</p>
-		    <a class="btn btn-primary" href="#">View Project</a>
+		    <a class="btn btn-primary" href="#">Ver proyecto</a>
 		</div>
 	    </div>
 	    <!-- /.row -->
@@ -136,12 +136,12 @@
 		<li class="page-item">
 		    <a class="page-link" href="#">1</a>
 		</li>
-		<li class="page-item">
+		<!-- <li class="page-item">
 		    <a class="page-link" href="#">2</a>
 		</li>
 		<li class="page-item">
 		    <a class="page-link" href="#">3</a>
-		</li>
+		</li>-->
 		<li class="page-item">
 		    <a class="page-link" href="#" aria-label="Next">
 			<span aria-hidden="true">&raquo;</span>
