fix some issues

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			    <a class="nav-link" href="#">Experimentos</a>
 			</li>
 			<li class="nav-item">
-			    <a class="nav-link" href="#">Juegos</a>
+			    <a class="nav-link" href="#">Ocio</a>
 			</li>
 		    </ul>
 		</div>
@@ -65,7 +65,7 @@
 		</div>
 		<div class="col-md-5">
 		    <h3>Felicidando (Perú)</h3>
-		    <p><strong>Ganadora de Startup Perú 4G.</strong>Es un sistema innovador, que busca ser el nexo entre emprendimientos de ayuda social que necesitan apoyo y los recursos necesarios para poder llevarlos a cabo. Para ello, hemos desarrollado una plataforma web que facilita la captación de los recursos para lograr dicho objetivo. </p>
+		    <p><strong>Ganadora de Startup Perú 3G.</strong>Es un sistema innovador, que busca ser el nexo entre emprendimientos de ayuda social que necesitan apoyo y los recursos necesarios para poder llevarlos a cabo. Para ello, hemos desarrollado una plataforma web que facilita la captación de los recursos para lograr dicho objetivo. </p>
 		    <a class="btn btn-primary" href="https://felicidando.com" target="_blank">Ver proyecto</a>
 		</div>
 	    </div>
@@ -82,7 +82,7 @@
 		</div>
 		<div class="col-md-5">
 		    <h3>Tacho Inteligente (Perú)</h3>
-		    <p>Tacho inteligente se compone de 2 partes: 1) Un dispositivo (IoT) con un sensor ultrasónico para detectar el nivel de llenado de un contenedor de residuos al cual estará acoplado; este dispositivo envía una señal cuando se encuentra lleno y listo para ser cambiado 2) Aplicación móvil que recibe en tiempo real información sobre las condiciones de llenado del contenedor. Funciona de la siguiente manera: cuando el contenedor se encuentre lleno (el nivel de llenado va a ser determinado por el cliente), este le enviará una señal a la aplicación móvil que podrá ser usada; maximizando así la capacidad del contenedor y disminuyendo los costos de transporte y emisiones de CO2.</p>
+		    <p><strong>Ganadora de Startup Perú 5G.</strong>Tacho inteligente se compone de 2 partes: 1) Un dispositivo (IoT) con un sensor ultrasónico para detectar el nivel de llenado de un contenedor de residuos al cual estará acoplado; este dispositivo envía una señal cuando se encuentra lleno y listo para ser cambiado 2) Aplicación móvil que recibe en tiempo real información sobre las condiciones de llenado del contenedor. Funciona de la siguiente manera: cuando el contenedor se encuentre lleno (el nivel de llenado va a ser determinado por el cliente), este le enviará una señal a la aplicación móvil que podrá ser usada; maximizando así la capacidad del contenedor y disminuyendo los costos de transporte y emisiones de CO2.</p>
 		    <a class="btn btn-primary" href="#">Ver proyecto</a>
 		</div>
 	    </div>
