fix some issues x4 jajaja

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		</div>
 		<div class="col-md-5">
 		    <h3>Ameli (Colombia)</h3>
-		    <p>Plataforma de gestión para entidades de salud y organizaciones médicas. Los atributos generales son: manejar citas, historial clínico, notificación para los pacientes y mucho máss. Amelí trabaja de la mano con el compriso de una cultura de orden en los flujos del proceso colombiano</p>
+		    <p>Plataforma de gestión para entidades de salud y organizaciones médicas. Los atributos generales son: manejar citas, historial clínico, notificación para los pacientes y mucho más. Amelí trabaja de la mano con el compriso de una cultura de orden en los flujos del proceso colombiano</p>
 		    <a class="btn btn-primary" href="#">Ver proyecto</a>
 		</div>
 	    </div>
